--- a/formulario.html
+++ b/formulario.html
@@ -1,44 +1,56 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+    <!-- Metadados -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Título da página (aparece na aba) -->
     <title>Formulário</title>
+
+    <!-- CSS -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <!-- Cabeçalho com título e subtítulo -->
     <div>
         <h1 id="titulo">Cadastro</h1>
         <p id="subtitulo">Complete o formulário com seus dados</p>
         <hr>
     </div>
 
+    <!-- Início do formulário -->
     <form>
         <fieldset class="grupo">
             <div>
+                 <!-- Campo do nome -->
                 <label for="nome"><strong>Nome</strong></label>
                 <input type="text" name="nome" id="nome" required>
             </div>
 
             <div>
+                <!-- Campo do sobrenome -->
                 <label for="sobrenome"><strong>Sobrenome</strong></label>
                 <input type="text" name="sobrenome" id="sobrenome" required>
             </div>
 
             <div>
+                <!-- Campo da idade -->
                 <label for="idade"><strong>Idade</strong></label>
                 <input type="number" name="idade" id="idade" required>
             </div>
 
             <div>
+                <!-- Campo do email -->
                 <label for="e-mail"><strong>E-mail</strong></label>
                 <input type="email" name="email" id="email" required>
             </div>
         </fieldset>
 
-        <div>
-            <fieldset id="check">
+            <!-- Campo de tecnologias para escolha de 1 ou mais opções para marcar (checkbox) -->
+            <div id="check">
                 <label for="linguagens"><strong>Quais tecnologias você utiliza:</strong></label>
                 <br>
                 <input type="checkbox" name="linguagens" id="python">Python
@@ -47,20 +59,24 @@
                 <input type="checkbox" name="linguagens" id="javascript">JavaScript 
                 <input type="checkbox" name="linguagens" id="php">PHP
                 <input type="checkbox" name="linguagens" id="java">JAVA
-            </fieldset>
+            </div>
+
         </div>
 
+        <!-- Caixa de texto -->
         <div class="campo">
             <label for="espaço"><strong>Conte um pouco das suas experiências com essas tecnologias:</strong></label>
             <br>
             <textarea name="experiencia" id="experiencia" cols="30" rows="3"></textarea>
         </div>
         
+        <!-- Importação de arquivos do computador -->
         <div class="campo">
             <label for="curriculo"><strong>Coloque o seu currículo:</strong></label>
             <input type="file" name="curriculo" id="curriculo">
         </div>
 
+        <!-- Rede social com imagem -->
         <div class="redes">
             <label for="github"><strong>Username GitHub</strong></label>
             <img src="icone-github.png" alt="github">
@@ -68,13 +84,17 @@
             <input type="text" name="github" id="github"> 
         </div>
 
+        <!-- Rede social com imagem -->
         <div class="redes">
             <label for="linkedin"><strong>Nome LinkedIn</strong></label>
             <img src="icone-linkedin.png" alt="linkedin">
             <br>
             <input type="text" name="linkedin" id="linkedin">
         </div>
+
 <br>
+
+        <!-- Botão para enviar o formulário -->
         <button class="botao" type="submit" onsubmit="">Concluído</button>
     </form>
 
