--- a/formulario.html
+++ b/formulario.html
@@ -11,6 +11,7 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
 
@@ -24,25 +25,27 @@
     <!-- Início do formulário -->
     <form>
         <fieldset class="grupo">
-            <div>
+            <div class="nomes">
                  <!-- Campo do nome -->
                 <label for="nome"><strong>Nome</strong></label>
                 <input type="text" name="nome" id="nome" required>
             </div>
 
-            <div>
+            <div class="nomes">
                 <!-- Campo do sobrenome -->
                 <label for="sobrenome"><strong>Sobrenome</strong></label>
                 <input type="text" name="sobrenome" id="sobrenome" required>
             </div>
 
-            <div>
+<br>
+        
+            <div class="ie">
                 <!-- Campo da idade -->
                 <label for="idade"><strong>Idade</strong></label>
                 <input type="number" name="idade" id="idade" required>
             </div>
 
-            <div>
+            <div class="ie">
                 <!-- Campo do email -->
                 <label for="e-mail"><strong>E-mail</strong></label>
                 <input type="email" name="email" id="email" required>
@@ -97,6 +100,5 @@
         <!-- Botão para enviar o formulário -->
         <button class="botao" type="submit" onsubmit="">Concluído</button>
     </form>
-
 </body>
 </html>
